--- a/public/parts/head.html
+++ b/public/parts/head.html
@@ -4,27 +4,22 @@
 </header>
 <!-- end header-->
 <!-- start top-nav-->
-<div class="top-nav block-with-lazy">
-	<div class="container">
-		<div class="row">
-			<div class="col order-lg-0 order-last">
-				<div class="menu-mobile menu-mobile--js">
-					<div class="menu-mobile__inner">
-						<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
-						</div>
-						<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Наши работы</a></li>
-							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
-							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Калькулятор</a></li>
-							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Акции</a></li>
-							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Заказать</a></li>
-						</ul>
-					</div>
-				</div>
+<div class="top-nav"> 
+	<div class="row">
+		<div class="col-auto">
+			<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
 			</div>
-			<div class="col-auto d-lg-none">
-				<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
-				</div>
+		</div>
+		<div class="col"><a href="/"><img src="img/svg/logo.svg" alt=""/></a></div>
+		<div class="col-auto">
+			<div class="top-nav__lang">Eng
+			</div>
+		</div>
+		<div class="col-auto">
+			<div class="btn-search"> 
+				<svg class="icon icon-search ">
+					<use xlink:href="img/svg/sprite.svg#search"></use>
+				</svg>
 			</div>
 		</div>
 	</div>
