--- a/public/index.html
+++ b/public/index.html
@@ -270,7 +270,6 @@
 							<div class="tabs__btn">Управление цепочками поставок</div>
 							<div class="tabs__btn">Взаимоотношения  с&nbsp;клиентами и&nbsp;клиентский опыт</div>
 							<div class="tabs__btn">Предиктивная аналитика</div>
-							<div class="tabs__line"></div>
 						</div>
 						<div class="tabs__wrap col-md-7">
 								<div class="tabs__content active">
@@ -500,15 +499,193 @@
 						<h2>Нам доверяют</h2>
 					</div>
 					<div class="tabs">
-						<div class="tabs__caption swiper-wrapper">
-							<div class="tabs__btn swiper-slide active"> InfinBANK</div>
-							<div class="tabs__btn swiper-slide">Транснефть</div>
-							<div class="tabs__btn swiper-slide">Пулково</div>
-							<div class="tabs__btn swiper-slide">СберБанк</div>
+						<div class="tabs-slider--js">
+							<div class="tabs__caption swiper-wrapper">
+								<div class="tabs__btn swiper-slide active"> InfinBANK</div>
+								<div class="tabs__btn swiper-slide">Транснефть</div>
+								<div class="tabs__btn swiper-slide">Пулково</div>
+								<div class="tabs__btn swiper-slide">СберБанк</div>
+								<div class="tabs__btn swiper-slide">СберБанк</div>
+							</div>
 						</div>
-						<div class="tabs__caption"></div>
+						<div class="tabs__wrap">
+										<div class="tabs__content active">
+											<div class="row">
+												<div class="col-lg-6">
+													<div class="sTrust__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/trust-img.jpg" alt="" loading="lazy"/>
+													</div>
+												</div>
+												<div class="col-lg-6">
+													<h4>Программа проектов «Реновация» цифровой трансформации банка InfinBank</h4>
+													<div class="sTrust__row row">
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">№1
+															</div>
+															<p>Первое внедрение SAP в банковском секторе Узбекистана. Проект-победитель SAP Quality Awords 2017</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">220+
+															</div>
+															<p>Источников информации  из&nbsp;систем и&nbsp;подразделений банка объединено в&nbsp;КХД</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">400
+															</div>
+															<p>Количество пользователей единой системы</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<a class="link-more" href="#">
+																<svg class="icon icon-arrrow-right ">
+																	<use xlink:href="img/svg/sprite.svg#arrrow-right"></use>
+																</svg><br/>Перейти в раздел проекты
+															</a>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="tabs__content">
+											<div class="row">
+												<div class="col-lg-6">
+													<div class="sTrust__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/trust-img.jpg" alt="" loading="lazy"/>
+													</div>
+												</div>
+												<div class="col-lg-6">
+													<h4>Программа проектов «Реновация» цифровой трансформации банка InfinBank</h4>
+													<div class="sTrust__row row">
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">№1
+															</div>
+															<p>Первое внедрение SAP в банковском секторе Узбекистана. Проект-победитель SAP Quality Awords 2017</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">220+
+															</div>
+															<p>Источников информации  из&nbsp;систем и&nbsp;подразделений банка объединено в&nbsp;КХД</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">400
+															</div>
+															<p>Количество пользователей единой системы</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<a class="link-more" href="#">
+																<svg class="icon icon-arrrow-right ">
+																	<use xlink:href="img/svg/sprite.svg#arrrow-right"></use>
+																</svg><br/>Перейти в раздел проекты
+															</a>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="tabs__content">
+											<div class="row">
+												<div class="col-lg-6">
+													<div class="sTrust__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/trust-img.jpg" alt="" loading="lazy"/>
+													</div>
+												</div>
+												<div class="col-lg-6">
+													<h4>Программа проектов «Реновация» цифровой трансформации банка InfinBank</h4>
+													<div class="sTrust__row row">
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">№1
+															</div>
+															<p>Первое внедрение SAP в банковском секторе Узбекистана. Проект-победитель SAP Quality Awords 2017</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">220+
+															</div>
+															<p>Источников информации  из&nbsp;систем и&nbsp;подразделений банка объединено в&nbsp;КХД</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">400
+															</div>
+															<p>Количество пользователей единой системы</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<a class="link-more" href="#">
+																<svg class="icon icon-arrrow-right ">
+																	<use xlink:href="img/svg/sprite.svg#arrrow-right"></use>
+																</svg><br/>Перейти в раздел проекты
+															</a>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="tabs__content">
+											<div class="row">
+												<div class="col-lg-6">
+													<div class="sTrust__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/trust-img.jpg" alt="" loading="lazy"/>
+													</div>
+												</div>
+												<div class="col-lg-6">
+													<h4>Программа проектов «Реновация» цифровой трансформации банка InfinBank</h4>
+													<div class="sTrust__row row">
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">№1
+															</div>
+															<p>Первое внедрение SAP в банковском секторе Узбекистана. Проект-победитель SAP Quality Awords 2017</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">220+
+															</div>
+															<p>Источников информации  из&nbsp;систем и&nbsp;подразделений банка объединено в&nbsp;КХД</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">400
+															</div>
+															<p>Количество пользователей единой системы</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<a class="link-more" href="#">
+																<svg class="icon icon-arrrow-right ">
+																	<use xlink:href="img/svg/sprite.svg#arrrow-right"></use>
+																</svg><br/>Перейти в раздел проекты
+															</a>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="tabs__content">
+											<div class="row">
+												<div class="col-lg-6">
+													<div class="sTrust__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/trust-img.jpg" alt="" loading="lazy"/>
+													</div>
+												</div>
+												<div class="col-lg-6">
+													<h4>Программа проектов «Реновация» цифровой трансформации банка InfinBank</h4>
+													<div class="sTrust__row row">
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">№1
+															</div>
+															<p>Первое внедрение SAP в банковском секторе Узбекистана. Проект-победитель SAP Quality Awords 2017</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">220+
+															</div>
+															<p>Источников информации  из&nbsp;систем и&nbsp;подразделений банка объединено в&nbsp;КХД</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<div class="sTrust__count">400
+															</div>
+															<p>Количество пользователей единой системы</p>
+														</div>
+														<div class="sTrust__col col-6">
+															<a class="link-more" href="#">
+																<svg class="icon icon-arrrow-right ">
+																	<use xlink:href="img/svg/sprite.svg#arrrow-right"></use>
+																</svg><br/>Перейти в раздел проекты
+															</a>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+						</div>
 					</div>
-					<div class="row"></div>
 				</div>
 			</section>
 			<!-- end sTrust-->
