--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -47,10 +47,14 @@
 		</div>
 		<!-- #modal-call-->
 		<!-- end modals-->
+		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<script src="libs/jquery/jquery.min.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"> </script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
+		<script src="libs/gsap/ScrollTrigger.min.js"> </script>
+		<script src="libs/gsap/gsap.min.js"> </script>
+		<script src="libs/aos/aos.js"> </script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
