--- a/public/02-about.html
+++ b/public/02-about.html
@@ -90,6 +90,59 @@
 				</div>
 			</div>
 			<!-- end sAboutPerson-->
+			<!-- start sAboutCaption-->
+			<section class="sAboutCaption section bg-white" id="sAboutCaption">
+				<div class="container">
+					<div class="section-title">
+						<h2>Стабильность требует изменений</h2>
+						<div class="sAboutCaption__sub-title">Помогаем компаниям в проектах цифровой трансформации
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-6">
+								<div class="sAboutCaption__item">
+									<div class="sAboutCaption__item-pic"><img src="img/svg/sAboutCaption-1.svg" alt=""/>
+									</div>
+									<div class="sAboutCaption__item-title">Профессионализм
+									</div>
+									<div class="sAboutCaption__item-text">Профессионализм лежит в&nbsp;основе нашей стабильности&nbsp;&mdash; мы&nbsp;знаем, как подойти к&nbsp;решению нестандартных задач и&nbsp;обеспечить неизменно высокий результат в&nbsp;меняющихся условиях. Все наши достижения&nbsp;&mdash; результат многолетней работы и&nbsp;мы&nbsp;гордимся&nbsp;ею.
+									</div>
+								</div>
+						</div>
+						<div class="col-lg-6">
+								<div class="sAboutCaption__item">
+									<div class="sAboutCaption__item-pic"><img src="img/svg/sAboutCaption-2.svg" alt=""/>
+									</div>
+									<div class="sAboutCaption__item-title">Командность
+									</div>
+									<div class="sAboutCaption__item-text">Командность вдохновляет нас на&nbsp;результаты выше ожиданий&nbsp;&mdash; умеем работать в&nbsp;команде, соблюдать баланс командных и&nbsp;личных интересов, поддерживать и&nbsp;ценить друг друга, выбирать лучшее решение вне зависимости от&nbsp;того,кому оно принадлежит. Мы&nbsp;стремимся создать атмосферу комфорта и&nbsp;доверия&nbsp;&mdash; в&nbsp;компании, в&nbsp;проектах, в&nbsp;партнерстве с&nbsp;клиентами.
+									</div>
+								</div>
+						</div>
+						<div class="col-lg-6">
+								<div class="sAboutCaption__item">
+									<div class="sAboutCaption__item-pic"><img src="img/svg/sAboutCaption-3.svg" alt=""/>
+									</div>
+									<div class="sAboutCaption__item-title">Открытость
+									</div>
+									<div class="sAboutCaption__item-text">Открытость дает нам возможность мыслить масштабно, без границ&nbsp;&mdash; быть открытыми новым технологиям и&nbsp;мнениям,находить незаурядные решения, открыто делиться знаниями с&nbsp;коллегами, клиентами, партнерами. Мы&nbsp;любим инновации и&nbsp;следуем&nbsp;им.
+									</div>
+								</div>
+						</div>
+						<div class="col-lg-6">
+								<div class="sAboutCaption__item">
+									<div class="sAboutCaption__item-pic"><img src="img/svg/sAboutCaption-4.svg" alt=""/>
+									</div>
+									<div class="sAboutCaption__item-title">Ответственность
+									</div>
+									<div class="sAboutCaption__item-text">Ответственность определяет наш образ мыслей и&nbsp;поступки&nbsp;&mdash; мы&nbsp;умеем брать ответственность за&nbsp;собственные действия и&nbsp;общий результат, ответственно подходим к&nbsp;исполнению обязательств и&nbsp;договоренностей, дорожим репутацией и&nbsp;ценим долголетнее партнерство. Исходим из&nbsp;принципа &laquo;успех наших клиентов&nbsp;&mdash; наш успех&raquo;.
+									</div>
+								</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sAboutCaption-->
 			<!-- start sForm-->
 			<section class="sForm section bg-dark section section--vh" id="sForm">
 				<div class="container">
