--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,72 @@
 				</div>
 				<div class="menu-mobile__inner">
 					<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Наши работы</a></li>
-						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
-						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Калькулятор</a></li>
-						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Акции</a></li>
-						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Заказать</a></li>
+						<li class="menu-item menu-item-has-children"><a href="#" itemprop="url">О компании</a>
+							<ul class="sub-menu">
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Центр прикладной разработки</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
+									</ul>
+								</li>
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
+									</ul>
+								</li>
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Бизнес-аналитика</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
+									</ul>
+								</li>
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Разработка методологии</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
+									</ul>
+								</li>
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Обучение</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li class="menu-item menu-item-has-children"><a href="#" itemprop="url">Направления</a>
+							<ul class="sub-menu">
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Центр прикладной разработки</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
+									</ul>
+								</li>
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
+									</ul>
+								</li>
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Бизнес-аналитика</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
+									</ul>
+								</li>
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Разработка методологии</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
+									</ul>
+								</li>
+								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Обучение</a>
+									<ul class="sub-menu"> 
+										<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Технологии</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Подходы</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Обучение</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Проектный опыт</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Работа в SUPRUN</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Стажировка  в&nbsp;SUPRUN</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Пресс-центр</a></li>
 					</ul>
 				</div>
 			</div>
@@ -65,6 +126,7 @@
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
 			<div class="headerBlock section bg-dark section section--vh" id="headerBlock">
+				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
 				<div class="container">
 					<div class="headerBlock__inner">
 						<h1>Открываем для компаний <span>новые возможности</span> в&nbsp;проектах цифровой&nbsp;трансформации</h1>
