--- a/public/02-about.html
+++ b/public/02-about.html
@@ -122,9 +122,10 @@
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
 			<div class="headerBlock headerBlock--about bg-wrap section bg-dark section section--vh" id="headerBlock">
+				<div class="animate-blur animate-blur--right"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
 				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockAbout-bg.jpg" alt=""/>
 				</div>
-				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockAbout-bg.jpg" alt=""/>
+				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockAbout-bg-mob.jpg" alt=""/>
 				</div>
 				<div class="container">
 					<div class="headerBlock__inner">
@@ -135,7 +136,7 @@
 			</div>
 			<!-- end headerBlock-->
 			<!-- start sAboutPerson-->
-			<div class="sAboutPerson section bg-white" id="sAboutPerson">
+			<div class="sAboutPerson section bg-white section section--vh" id="sAboutPerson">
 				<div class="sAboutPerson__img"><img src="img/person-about.jpg" alt=""/>
 				</div>
 				<div class="sAboutPerson__text-block">
@@ -152,7 +153,7 @@
 			</div>
 			<!-- end sAboutPerson-->
 			<!-- start sAboutCaption-->
-			<section class="sAboutCaption section bg-white" id="sAboutCaption">
+			<section class="sAboutCaption section bg-white section section--vh" id="sAboutCaption">
 				<div class="container">
 					<div class="section-title">
 						<h2>Стабильность требует изменений</h2>
@@ -204,6 +205,44 @@
 				</div>
 			</section>
 			<!-- end sAboutCaption-->
+			<!-- start sStatus-->
+			<section class="sStatus section bg-white section section--vh" id="sStatus">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>Статусы</h2>
+						<h6>Более 13 лет мы работаем над тем, чтобы быть лучшей консалтинговой компанией в своем сегменте рынка по объему и качеству оказываемых услуг.</h6>
+					</div>
+					<div class="status-block">
+						<div class="status-block__wrap">
+							<div class="status-block__item">
+								<a class="status-block__status-pic" href="#"><img src="img/svg/status-1.svg" alt=""/>
+								</a>
+							</div>
+							<div class="status-block__item">
+								<a class="status-block__status-pic" href="#"><img src="img/svg/status-2.svg" alt=""/>
+								</a>
+							</div>
+							<div class="status-block__item">
+								<a class="status-block__status-pic" href="#"><img src="img/svg/status-3.svg" alt=""/>
+								</a>
+							</div>
+							<div class="status-block__item">
+								<a class="status-block__status-pic" href="#"><img src="img/svg/status-4.svg" alt=""/>
+								</a>
+							</div>
+							<div class="status-block__item">
+								<a class="status-block__status-pic" href="#"><img src="img/svg/status-5.svg" alt=""/>
+								</a>
+							</div>
+							<div class="status-block__item">
+								<a class="status-block__status-pic" href="#"><img src="img/svg/status-6.svg" alt=""/>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sStatus-->
 			<!-- start sForm-->
 			<section class="sForm section bg-dark section section--vh" id="sForm">
 				<div class="container">
