--- a/public/03-status.html
+++ b/public/03-status.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>О нас</title>
+		<title>Статусы и награды</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -122,89 +122,19 @@
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
 			<div class="headerBlock bg-wrap section bg-dark section section--vh" id="headerBlock">
-				<div class="animate-blur animate-blur--right"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
-				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockAbout-bg.jpg" alt=""/>
+				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockStatus-bg.jpg" alt=""/>
 				</div>
-				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockAbout-bg-mob.jpg" alt=""/>
+				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockStatus-bg-mob.jpg" alt=""/>
 				</div>
 				<div class="container">
 					<div class="headerBlock__inner">
-						<h1>О нас</h1>
-						<p>Группа компаний САПРАН специализируется на&nbsp;внедрении ИТ-решений для бизнеса на&nbsp;платформе SAP</p>
+						<h1>Статусы и награды </h1>
+						<p>Входим в&nbsp;TOP-10 крупнейших поставщиков BI-решений в&nbsp;России 2020, в&nbsp;TOP-5 аутсорсеров поддержки решений SAP в&nbsp;России по&nbsp;версии аналитического центра TAdviser</p>
 					</div>
 				</div>
 			</div>
 			<!-- end headerBlock-->
-			<!-- start sAboutPerson-->
-			<div class="sAboutPerson section bg-white section section--vh" id="sAboutPerson">
-				<div class="sAboutPerson__img"><img src="img/person-about.jpg" alt=""/>
-				</div>
-				<div class="sAboutPerson__text-block">
-					<h2>Миссия и ценности</h2>
-					<div class="sAboutPerson__quote">Стабильность в&nbsp;бизнесе и&nbsp;жизни не&nbsp;возможна без развития, движения вперёд. Бизнес наших клиентов постоянно меняется, и&nbsp;мы&nbsp;помогаем им&nbsp;в&nbsp;этом. Наша роль&nbsp;&mdash; придать энергии этим изменениям, запустить&nbsp;их. Для этого нас и&nbsp;выбирают. Поэтому SAPRUN&nbsp;&mdash; это энергия изменений
-					</div>
-					<div class="sAboutPerson__sign"><img src="img/sign.png" alt=""/>
-					</div>
-					<div class="sAboutPerson__name">Созинов Сергей
-					</div>
-					<div class="sAboutPerson__job">Генеральный директор
-					</div>
-				</div>
-			</div>
-			<!-- end sAboutPerson-->
-			<!-- start sAboutCaption-->
-			<section class="sAboutCaption section bg-white section section--vh" id="sAboutCaption">
-				<div class="container">
-					<div class="section-title">
-						<h2>Стабильность требует изменений</h2>
-						<div class="sAboutCaption__sub-title">Помогаем компаниям в проектах цифровой трансформации
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-lg-6">
-								<div class="sAboutCaption__item">
-									<div class="sAboutCaption__item-pic"><img src="img/svg/sAboutCaption-1.svg" alt=""/>
-									</div>
-									<div class="sAboutCaption__item-title">Профессионализм
-									</div>
-									<div class="sAboutCaption__item-text">Профессионализм лежит в&nbsp;основе нашей стабильности&nbsp;&mdash; мы&nbsp;знаем, как подойти к&nbsp;решению нестандартных задач и&nbsp;обеспечить неизменно высокий результат в&nbsp;меняющихся условиях. Все наши достижения&nbsp;&mdash; результат многолетней работы и&nbsp;мы&nbsp;гордимся&nbsp;ею.
-									</div>
-								</div>
-						</div>
-						<div class="col-lg-6">
-								<div class="sAboutCaption__item">
-									<div class="sAboutCaption__item-pic"><img src="img/svg/sAboutCaption-2.svg" alt=""/>
-									</div>
-									<div class="sAboutCaption__item-title">Командность
-									</div>
-									<div class="sAboutCaption__item-text">Командность вдохновляет нас на&nbsp;результаты выше ожиданий&nbsp;&mdash; умеем работать в&nbsp;команде, соблюдать баланс командных и&nbsp;личных интересов, поддерживать и&nbsp;ценить друг друга, выбирать лучшее решение вне зависимости от&nbsp;того,кому оно принадлежит. Мы&nbsp;стремимся создать атмосферу комфорта и&nbsp;доверия&nbsp;&mdash; в&nbsp;компании, в&nbsp;проектах, в&nbsp;партнерстве с&nbsp;клиентами.
-									</div>
-								</div>
-						</div>
-						<div class="col-lg-6">
-								<div class="sAboutCaption__item">
-									<div class="sAboutCaption__item-pic"><img src="img/svg/sAboutCaption-3.svg" alt=""/>
-									</div>
-									<div class="sAboutCaption__item-title">Открытость
-									</div>
-									<div class="sAboutCaption__item-text">Открытость дает нам возможность мыслить масштабно, без границ&nbsp;&mdash; быть открытыми новым технологиям и&nbsp;мнениям,находить незаурядные решения, открыто делиться знаниями с&nbsp;коллегами, клиентами, партнерами. Мы&nbsp;любим инновации и&nbsp;следуем&nbsp;им.
-									</div>
-								</div>
-						</div>
-						<div class="col-lg-6">
-								<div class="sAboutCaption__item">
-									<div class="sAboutCaption__item-pic"><img src="img/svg/sAboutCaption-4.svg" alt=""/>
-									</div>
-									<div class="sAboutCaption__item-title">Ответственность
-									</div>
-									<div class="sAboutCaption__item-text">Ответственность определяет наш образ мыслей и&nbsp;поступки&nbsp;&mdash; мы&nbsp;умеем брать ответственность за&nbsp;собственные действия и&nbsp;общий результат, ответственно подходим к&nbsp;исполнению обязательств и&nbsp;договоренностей, дорожим репутацией и&nbsp;ценим долголетнее партнерство. Исходим из&nbsp;принципа &laquo;успех наших клиентов&nbsp;&mdash; наш успех&raquo;.
-									</div>
-								</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end sAboutCaption-->
 			<!-- start sStatus-->
 			<section class="sStatus section bg-white section section--vh" id="sStatus">
 				<div class="container">
@@ -227,76 +157,12 @@
 								</a>
 							</div>
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-4.svg" alt=""/>
-								</a>
-							</div>
-							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-5.svg" alt=""/>
-								</a>
-							</div>
-							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-6.svg" alt=""/>
-								</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- end sStatus-->
-			<!-- start sForm-->
-			<section class="sForm section bg-dark section section--vh" id="sForm">
-				<div class="container">
-					<div class="form-wrap">
-						<form>
-							<div class="section-title">
-								<h2>Давайте обсудим, как мы&nbsp;могли  бы&nbsp;работать вместе</h2>
-							</div>
-							<div class="form-wrap__row row">
-								<div class="col-md-6">
-									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Имя"/><span class="form-wrap__input-title">Имя</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-								</div>
-								<div class="col-md-6">
-									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Фамилия"/><span class="form-wrap__input-title">Фамилия</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-								</div>
-								<div class="col-md-6">
-									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Телефон"/><span class="form-wrap__input-title">Телефон</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-								</div>
-								<div class="col-md-6">
-									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="email" type="email" placeholder="E-mail"/><span class="form-wrap__input-title">E-mail</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-								</div>
-								<div class="col-12">
-									<div class="form-wrap__input-wrap form-group">
-										<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Что вы хотите обсудить?"></textarea><span class="form-wrap__input-title">Что вы хотите обсудить?</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-								</div>
-							</div>
-							<div class="form-wrap__policy"> Нажимая на&nbsp;кнопку &laquo;Отправить&raquo; я&nbsp;соглашаюсь с&nbsp;условиями  <a href="#">обработки персональных данных</a>
-							</div>
-							<button class="form-wrap__btn btn btn-primary" type="submit"> Отправить
-							</button>
-						</form>
-					</div>
-				</div>
-			</section>
-			<!-- end sForm-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
