--- a/public/02-about.html
+++ b/public/02-about.html
@@ -16,67 +16,123 @@
 	<body class="main-page page-fixed-video">
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js">
-				<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
+				<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
 				</div>
 				<div class="menu-mobile__inner">
 					<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
 						<li class="menu-item menu-item-has-children"><a href="#" itemprop="url">О компании</a>
-							<ul class="sub-menu">
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Центр прикладной разработки</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
-									</ul>
-								</li>
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
-									</ul>
-								</li>
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Бизнес-аналитика</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
-									</ul>
-								</li>
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Разработка методологии</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
-									</ul>
-								</li>
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Обучение</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
-									</ul>
-								</li>
-							</ul>
+							<div class="sub-menu-wrap">
+								<ul class="sub-menu">
+									<li class="menu-item menu-item-back d-lg-none" itemprop="item"> 
+										<svg class="icon icon-chevron-left ">
+											<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
+										</svg>Назад
+									</li>
+									<li class="menu-item menu-item-title d-lg-none" itemprop="item">О компании</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Центр прикладной разработки</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
+											</ul>
+										</div>
+									</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
+											</ul>
+										</div>
+									</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Бизнес-аналитика</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
+											</ul>
+										</div>
+									</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Разработка методологии</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
+											</ul>
+										</div>
+									</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Обучение</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
+											</ul>
+										</div>
+									</li>
+								</ul>
+							</div>
 						</li>
 						<li class="menu-item menu-item-has-children"><a href="#" itemprop="url">Направления</a>
-							<ul class="sub-menu">
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Центр прикладной разработки</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
-									</ul>
-								</li>
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
-									</ul>
-								</li>
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Бизнес-аналитика</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
-									</ul>
-								</li>
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Разработка методологии</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
-									</ul>
-								</li>
-								<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Обучение</a>
-									<ul class="sub-menu"> 
-										<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
-									</ul>
-								</li>
-							</ul>
+							<div class="sub-menu-wrap">
+								<ul class="sub-menu">
+									<li class="menu-item menu-item-back d-lg-none" itemprop="item"> 
+										<svg class="icon icon-chevron-left ">
+											<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
+										</svg>Назад
+									</li>
+									<li class="menu-item menu-item-title d-lg-none" itemprop="item">Направления</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Центр прикладной разработки</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Центр прикладной разработки</a></li>
+											</ul>
+										</div>
+									</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Технический консалтинг  и&nbsp;поддержка</a></li>
+											</ul>
+										</div>
+									</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Бизнес-аналитика</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Бизнес-аналитика</a></li>
+											</ul>
+										</div>
+									</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Разработка методологии</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Разработка методологии</a></li>
+											</ul>
+										</div>
+									</li>
+									<li class="menu-item menu-item-has-children" itemprop="item"><a href="#" itemprop="url">Обучение</a>
+										<div class="sub-menu-wrap">
+											<ul class="sub-menu"> 
+												<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
+												<li class="menu-item"><a href="#" itemprop="url">Обучение</a></li>
+											</ul>
+										</div>
+									</li>
+								</ul>
+							</div>
 						</li>
 						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
 						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Технологии</a></li>
