--- a/public/04-press-center.html
+++ b/public/04-press-center.html
@@ -269,6 +269,147 @@
 									</div>
 								</a>
 							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Онлайн-конференция «Инновационный день фармацевтических компаний 2021»
+									</div>
+									<div class="new-item__text">Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-3.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Онлайн-конференция «Инновационный день фармацевтических компаний 2021»
+									</div>
+									<div class="new-item__text">Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-3.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Онлайн-конференция «Инновационный день фармацевтических компаний 2021»
+									</div>
+									<div class="new-item__text">Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-3.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<div class="end-news-card">
+									<div class="end-news-card__title">Перейти в раздел новости
+									</div>
+									<svg class="icon icon-arrrow-right ">
+										<use xlink:href="img/svg/sprite.svg#arrrow-right"></use>
+									</svg>
+								</div>
+							</div>
 						</div>
 						<div class="swiper-scrollbar"></div>
 					</div>
